@@ -27,6 +27,7 @@ setup(name='apport',
                   ('share/apport/testsuite/', ['test-apport', 'test-hooks', 'run-tests']),
                   ('share/doc/apport/', glob.glob('doc/*.txt') + glob.glob('doc/*.pdf')),
                   ('share/apport/package-hooks/', glob.glob('package-hooks/*')),
+                  ('share/apport/general-hooks/', glob.glob('general-hooks/*')),
                   ('/etc/apport/', ['crashdb.conf'])]+mo_files,
       scripts=['bin/apport', 'bin/apport-checkreports', 'bin/apport-retrace',
           'bin/apport-unpack', 'bin/apport-chroot', 'bin/package_hook',
